<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@color/white"
    android:layout_margin="8dp"
    android:elevation="2dp">

    <!-- Post Image -->
    <ImageView
        android:id="@+id/postImageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/post_image" />

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="29dp"
        android:layout_height="35dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"

        android:layout_marginStart="8dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="8dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/delete_post"
        android:scaleType="centerInside"
        android:src="@drawable/delete" />

    <!-- Hobby -->

    <!-- Description -->

    <ImageButton
        android:id="@+id/editButton"
        android:layout_width="35dp"
        android:layout_height="38dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/deleteButton"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/edit_post"
        android:scaleType="centerInside"
        android:src="@drawable/pencil" />

    <TextView
        android:id="@+id/hobbyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/postImageView"
        android:layout_marginTop="10dp"
        android:text="Hobby"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hobbyTextView"
        android:layout_marginTop="4dp"
        android:text="Description"
        android:textSize="14sp" />



</RelativeLayout>
